<resources>
    <string name="app_name">RegistrationChallenge</string>
    <string name="first_name">First Name</string>
    <string name="register">REGISTER</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="firstView">First</string>
    <string name="lastView">Last</string>
    <string name="emailView">Email</string>
</resources>